# wordpress-author-style-imitate

./: README.md  pyproject.toml
src/notebooks/: llm_apply_author_style.ipynb  llm_classify_posts.ipynb  llm_generate_author_prompts.ipynb  retrieve_posts.ipynb
